# effective-mobile-trial-saucedemo

./: .gitignore  README.md  conftest.py  pyproject.toml  test_saucedemo.py
page_objects/: cart_page.py  checkout_complete_page.py  checkout_step_one_page.py  checkout_step_two_page.py  inventory_page.py  login_page.py
